# Informed_Consent_2

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  app.py  chainlit.md  control.py  defaults.py  entrypoint.sh  getVectorstore.py  prompts.py  pyproject.toml  queries.py
